kubernetes/apps/base/media/arr/fileflows/fileflows-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: fileflows
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: fileflows
  template:
    metadata:
      labels:
        app: fileflows
    spec:
      containers:
        - env:
            - name: BROWSER_START_DIR
              value: /apps/media
            - name: PGID
              value: "100"
            - name: PUID
              value: "1037"
            - name: TZ
              value: America/Denver
            - name: TempPathHost
              value: /app/temp
          image: revenz/fileflows
          name: fileflows
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /temp
              name: fileflows-claim1
            - mountPath: /app/Data
              name: fileflows-claim2
            - mountPath: /app/Logs
              name: fileflows-claim3
            - mountPath: /app/common
              name: fileflows-claim4
      restartPolicy: Always
      volumes:
        - name: fileflows-claim1
          persistentVolumeClaim:
            claimName: fileflows-claim1
        - name: fileflows-claim2
          persistentVolumeClaim:
            claimName: fileflows-claim2
        - name: fileflows-claim3
          persistentVolumeClaim:
            claimName: fileflows-claim3
        - name: fileflows-claim4
          persistentVolumeClaim:
            claimName: fileflows-claim4
