kubernetes/apps/base/media/arr/fileflows/fileflows-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fileflows
  name: fileflows
spec:
  ports:
    - name: "19200"
      port: 19200
      targetPort: 5000
  selector:
    io.kompose.service: fileflows
