kubernetes/apps/base/media/arr/fileflows/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileflows
  namespace: media
spec:
  selector:
    app: fileflows
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
