kubernetes/apps/base/media/arr/fileflows/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fileflows
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fileflows.${cluster_domain}`)
      kind: Rule
      services:
        - name: fileflows
          port: 5000
