kubernetes/apps/base/media/arr/fileflows/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fileflows
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`fileflows.theblacklodge.dev`)
      kind: Rule
      services:
        - name: fileflows
          port: 9696
